Converting to Tensor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "cSpell.words": [
         "dtype",
         "fliplr",
-        "numpy"
+        "numpy",
+        "openai",
+        "relu",
+        "tflearn"
     ]
 }
