--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,15 @@
-FROM python
+FROM ubuntu
+
+RUN apt update -y
+RUN apt upgrade -y
+RUN apt install python python3-pip -y
+RUN apt update -y
+RUN apt upgrade -y
 
 COPY requirements.txt requirements.txt
 
 RUN pip3 install -r requirements.txt
+RUN pip3 install --upgrade tensorflow
 
 # EXPOSE 8000
-ENTRYPOINT ["python run.py"]
+ENTRYPOINT ["/usr/bash"]
